--- a/index.html
+++ b/index.html
@@ -4,43 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Bootstrap Email Page</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/9764ad7248.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-
-
 </head>
 <body>
+    <!-- nav bar -->
+    <header>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        
+        <div class="container">
+            <a class="navbar-brand ms-auto" href="#">
+                <i class="fa-solid fa-user"></i>
+            </a>
+          </div>
+
+        <!-- hamburger menu -->
+
+    </nav>
+
     <div class="container-fliud my-container">
-        <div class="collapse d-lg-none" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-              <h5 class="text-white h4">RJ's account</h5>
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inbox</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Sent</a>
-                </li>
-                <li class=""nav-item">
-                    <a class="nav-link aria-current="page" href="#">Junk</a>
-                </li>
-                <li class=""nav-item">
-                    <a class="nav-link aria-current="page" href="#">Deleted</a>
-                </li>
-                <li class=""nav-item">
-                    <a class="nav-link aria-current="page" href="#">Archive</a>
-                </li>
-            </div>
-        </div>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Inbox</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-        </nav>
         <div class="row">
             <div class="col-12 my-col">
                 <h4>Subject</h4>
