Change class so hamburger dissapears for large > displays

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <!-- hamburger menu -->
-                <div class="d-lg-none d-xl-none user-logo">
+                <div class="d-lg-none d-l-none user-logo">
                     <i class="fa-solid fa-bars" style="color: #ecf1f8;" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>></i>
                     <!--hamburger menu content-->
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
