Change button's to be dark style with appropriate placeholders

--- a/index.html
+++ b/index.html
@@ -17,26 +17,22 @@
             <div class="container-fluid">
                 <!-- hamburger menu -->
                 <div class="d-lg-none d-l-none user-logo">
-                    <i class="fa-solid fa-bars" style="color: #ecf1f8;" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"></i>></i>
+                    <i class="fa-solid fa-bars" style="color: #ecf1f8;" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvasExample"></i>></i>
                     <!--hamburger menu content-->
-                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                      <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Adil Potter </h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                      </div>
-                      <div class="offcanvas-body">
-                        <div class="d-flex flex-column justify-content-between" id="account-section-area">
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-user me-2"></i> Account</button>
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-person me-2"></i> Personal details</button>
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-lock me-2"></i> Password and security</button>
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-gear me-2"></i> Setting</button>
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-question me-2"></i> Help</button>
-                          <button class="btn btn-outline-secondary"><i class="fa-solid fa-right-from-bracket me-2"></i> Sign-out</button>
-                          
-                        </div>
-                      </div>
+                    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasLabel">RJ's account</h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-              </div>
+                        <div class="offcanvas-body bg-dark d-flex flex-column">
+                            <button type="button" class="btn btn-dark">Inbox</button>
+                            <button type="button" class="btn btn-dark">Sent</button>
+                            <button type="button" class="btn btn-dark">Junk</button>
+                            <button type="button" class="btn btn-dark">Deleted</button>
+                            <button type="button" class="btn btn-dark">Archive</button>
+                        </div>
+                    </div>
+                </div>
     
                 <!-- account icon -->
                 <a class="navbar-brand ms-auto" href="#">
@@ -47,7 +43,6 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-</div>
             </div>
         </nav>
     </header>
