Add promo images for message and change class to col-lg-9 to occupy more of the space in viewport

--- a/index.html
+++ b/index.html
@@ -50,42 +50,51 @@
     <div class="row">
         <div class="col-lg-2 bg-light">
 
+            <!-- in order to get one email preview per line-->
             <div class="row row-cols-1">
-        <!-- email previews that will be responsive to all screens-->
-            <div class="col border border-dark">
-                Clockify <br> Tried extra features? <br> Clockify is more than just a time tracker. Our additional features, help you better manage projects and teammates.
+                <!-- email previews that will be responsive to all screens-->
+                <div class="col border border-dark bg-primary text-white">
+                    Clockify <br> Tried extra features? <br> Clockify is more than just a time tracker. Our additional features, help you better manage projects and teammates.
+                </div>
+                <div class="col border border-dark">
+                    Alexander Lucas (Classroom) <br> NEW MATERIAL <br> Academind Bootstrap 4 Tutorials - Introduction to Bootstrap and Bootstrap Grid.
+                </div>
+                <div class="col border border-dark rounded-3">
+                    Canva <br> Unlock the top 3 premium Canva features.
+                </div>
+                <div class="col border border-dark rounded-3">
+                    NetworkChuck <br> Exciting News: Prepare for an upgraded learning experience.
+                </div>
+                <div class="col border border-dark rounded-3">
+                    Discord <br> Welcome to Discord, ADiL <br> You’ve just entered the upper atmosphere of Discord, a wild and wonderful world filled with comfortable places for..........
+                </div>
+                <div class="col border border-dark rounded-3">
+                    Alexander Lucas (Classroom) <br> New announcement: The recording of the hybrid class we had on Wednesday has been posted into Week 3 Class 2 recordings. 
+                </div>
+                <div class="col border border-dark rounded-3">
+                    LinkedIn Job Alerts <br> “software engineer“: 30+ opportunities.....
+                </div>
+                <div class="col border border-dark rounded-3">
+                    Alexander Lucas (Classroom) <br> New material: "Reviewing Git and Github.com…"
+                </div> 
             </div>
-            <div class="col border border-dark">
-                  Alexander Lucas (Classroom) <br> NEW MATERIAL <br> Academind Bootstrap 4 Tutorials - Introduction to Bootstrap and Bootstrap Grid.
-            </div>
-            <div class="col border border-dark rounded-3">
-                  Canva <br> Unlock the top 3 premium Canva features.
-            </div>
-            <div class="col border border-dark rounded-3">
-                  NetworkChuck <br> Exciting News: Prepare for an upgraded learning experience.
-            </div>
-            <div class="col border border-dark rounded-3">
-                  Discord <br> Welcome to Discord, ADiL <br> You’ve just entered the upper atmosphere of Discord, a wild and wonderful world filled with comfortable places for..........
-            </div>
-            <div class="col border border-dark rounded-3">
-                  Alexander Lucas (Classroom) <br> New announcement: The recording of the hybrid class we had on Wednesday has been posted into Week 3 Class 2 recordings. 
-            </div>
-            <div class="col border border-dark rounded-3">
-                  LinkedIn Job Alerts <br> “software engineer“: 30+ opportunities.....
-            </div>
-            <div class="col border border-dark rounded-3">
-                  Alexander Lucas (Classroom) <br> New material: "Reviewing Git and Github.com…"
-            </div> 
-            </div>
+
         </div> 
 
         <!-- email highlight to show on large screen -->
-        <div class="h-100 p-0 col-md-7 col-lg-5 d-none d-md-none d-lg-block">
+        <div class="col-lg-9 d-none d-md-none d-lg-block">
 
             <div class="bg-light w-80 m-4 mb-0 rounded-5" id="col-3-opened-email-div">
                 <div class="row h-75 d-inline-block ">
-                  <div class="col-11 m-4 fs-5" >Email that is currently opened<br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, impedit nam facere repellendus dignissimos illo fugiat recusandae rerum eveniet porro voluptatibus odio totam dolorum sint magnam quam laboriosam itaque ad.</div>
+                  <div class="col-11 m-4 fs-5" >UNIQLO USA <br>To You<br><br>
+                    <div class="d-flex justify-content-center promo-pics">
+                        <img src="./images/pexels-danik-prihodko-15759557.jpg" alt="girl in fleece" width="250" height="350">
+                        <img src="./images/pexels-danik-prihodko-15759563.jpg" alt="girl in fleece" width="250" height="350">
+                        <img src="./images/pexels-danik-prihodko-15759572.jpg" alt="girl in fleece" width="250" height="350">
+                    </div>
+                    Take on cool weather in style with our Fleece Collection. Crafted with soft, cozy, lightweight, and functional fabrics.
                 </div>
+            </div>
             
                 <!--col-3 reply div-->
                 <div class="bg-dark opacity-50 m-4 rounded-5" id="col-3-reply-email-div">
