Create class for message body

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <img src="./images/pexels-danik-prihodko-15759563.jpg" alt="girl in fleece" width="250" height="350">
                         <img src="./images/pexels-danik-prihodko-15759572.jpg" alt="girl in fleece" width="250" height="350">
                     </div>
-                    Take on cool weather in style with our Fleece Collection. Crafted with soft, cozy, lightweight, and functional fabrics.
+                    <div class="message-body">Take on cool weather in style with our Fleece Collection. Crafted with soft, cozy, lightweight, and functional fabrics.</div>
                 </div>
             </div>
             
