--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <i class="fa-solid fa-user"></i>
                 </a>
                 <!-- search bar -->
-                <form class="d-flex" role="search">
+                <form class="d-flex" role="search" id="search-bar">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
