start-0 had no effect so removed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <!-- hamburger menu -->
-                <div class="hamburger-menu start-0">
+                <div class="hamburger-menu">
                     <i class="fa-solid fa-bars" style="color: #ecf1f8;" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvasExample"></i>
                     <!--hamburger menu content-->
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
