--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
                     <!--hamburger menu content-->
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas right</h5>
+                            <h5 class="offcanvas-title" id="offcanvasLabel">New Message</h5>
                             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                         <div class="offcanvas-body">
-
+                            <form>
+                                <div class="form-group">
+                                  <label for="formGroupExampleInput"></label>
+                                  <input type="text" class="form-control-to" id="formGroupExampleInput" placeholder="To:">
+                                </div>
+                                <div class="form-group">
+                                  <label for="formGroupExampleInput2"></label>
+                                  <input type="text" class="form-control-subject" id="formGroupExampleInput2" placeholder="Subject:">
+                                </div>
+                                <textarea name="paragraph_text" cols="30" rows="10"></textarea>
+                              </form>
                         </div>
                     </div>
                 </div>
