Add send button to offcanvas new message

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                                   <input type="text" class="form-control-subject" id="formGroupExampleInput2" placeholder="Subject:">
                                 </div>
                                 <textarea name="paragraph_text" cols="30" rows="10"></textarea>
-                              </form>
+                            </form>
+                            <button type="button" class="btn btn-primary btn-lg">Send</button>   
                         </div>
                     </div>
                 </div>
