Add subheader for lg > screens to compose and filter read messages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- compose button -->
                 <div class="compose ms-auto d-lg-none d-xl-none">
                     <i class="fa-regular fa-envelope" style="color: #ecf1f8;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" href="#offcanvas" role="button" aria-controls="offcanvasRight"></i>
-                    <!--hamburger menu content-->
+                    <!--compose message content-->
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                         <div class="offcanvas-header">
                             <h5 class="offcanvas-title" id="offcanvasLabel">New Message</h5>
@@ -72,6 +72,21 @@
             </div>
         </nav>
     </header>
+
+    <!-- sub header for lg screen -->
+<div class="container-fluid">
+<div class="row row-cols-1 d-none d-md-none d-lg-block mt-3">
+    <div class="col">
+        <a class="navbar-brand" href="#">
+            <i class="fa-regular fa-envelope fa-2xl"></i>
+        </a>Compose
+        <a class="navbar-brand" href="#">
+            <i class="fa-sharp fa-solid fa-envelope-open fa-2xl" style="color: #3074e8;"></i>
+        </a>Read
+    </div>
+    
+</div>
+</div>
 
     <div class="row">
         <div class="col-lg-3 bg-light">
