Change class names

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-lg-3 bg-light">
 
             <!-- in order to get one email preview per line-->
-            <div class="row row-cols-1">
+            <div class="email- previews row row-cols-1">
                 <!-- email previews that will be responsive to all screens-->
                 <div class="email-highlight col border border-dark">
                     UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.
@@ -128,7 +128,7 @@
         <!-- email highlight to show on large screen -->
         <div class="col-lg-9 d-none d-md-none d-lg-block">
             <div class="subject">Fleece to meet you</div>
-                <div class="col-11 m-3" >UNIQLO USA <br>To You<br><br>
+                <div class="message-highlight col-11 m-3" >UNIQLO USA <br>To You<br><br>
                     <div class="d-flex justify-content-center promo-pics">
                         <img src="./images/pexels-danik-prihodko-15759557.jpg" alt="girl in fleece" width="250" height="350">
                         <img src="./images/pexels-danik-prihodko-15759563.jpg" alt="girl in fleece" width="250" height="350">
