removed redundant code

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div> 
 
         <!-- email highlight to show on large screen -->
-        <div class="col-lg-9 d-none d-md-none d-lg-block">
+        <div class="col-9 d-none d-lg-block">
             <div class="subject">Fleece to meet you</div>
                 <div class="message-highlight col-11 m-3" >UNIQLO USA <br>To You<br><br>
                     <div class="d-flex justify-content-center promo-pics">
