Add sidebar to tablet view

--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
         <div class="col-md-4 d-none d-md-block d-lg-none">
             <div class="card" style="width: auto">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Inbox</li>
-                  <li class="list-group-item">Sent</li>
-                  <li class="list-group-item">Junk</li>
-                  <li class="list-group-item">Deleted</li>
-                  <li class="list-group-item">Archive</li>
-                  <li class="list-group-item">Junk</li>
+                  <li class="list-group-item"><button type="button" class="btn btn-light">Inbox</button></li>
+                  <li class="list-group-item"><button type="button" class="btn btn-light">Sent</button></li>
+                  <li class="list-group-item"><button type="button" class="btn btn-light">Junk</button></li>
+                  <li class="list-group-item"><button type="button" class="btn btn-light">Deleted</button></li>
+                  <li class="list-group-item"><button type="button" class="btn btn-light">Archive</button></li>
                 </ul>
             </div>
         </div>
