Wrapped some items in navbar in div w/ flex so to push them to the right

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
                 
                 <!-- compose button -->
+                <div class="d-flex justify-content-end align-items-center gap-3">
                 <div class="compose ms-auto d-lg-none d-xl-none">
                     <i class="fa-regular fa-envelope" style="color: #ecf1f8;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" href="#offcanvas" role="button" aria-controls="offcanvasRight"></i>
                     <!--compose message content-->
@@ -69,6 +70,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                </div>
             </div>
         </nav>
     </header>
