--- a/index.html
+++ b/index.html
@@ -46,22 +46,16 @@
                                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="formGroupExampleInput"></label>
-                                        <input type="text" class="form-control-to" id="formGroupExampleInput" placeholder="To:">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="formGroupExampleInput2"></label>
-                                        <input type="text" class="form-control-subject" id="formGroupExampleInput2" placeholder="Subject:">
-                                    </div>
-                                    <textarea name="paragraph_text" cols="30" rows="10"></textarea>
+                                <div class="mb-3">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="To">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
+                                </div>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder=""></textarea>
                                 </form>
                                 <button type="button" class="btn btn-primary btn-lg">Send</button>   
                             </div>
                         </div>
                     </div>
-
 
                     <!-- account icon -->
                     <a class="account navbar-brand ms-auto" href="#">
