Include reply and forward links to email previews

--- a/index.html
+++ b/index.html
@@ -112,15 +112,42 @@
             <!-- in order to get one email preview per line-->
             <div class="email-previews d-flex flex-column">
                 <!-- email previews that will be responsive to all screens-->
-                <button type="button" class="email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.</button>
-                <button type="button" class="email-prev btn">Figma <br> Sign up for Figma Education <br> Hi there,We wanted to let you know that you may...</button>
-                <button type="button" class="email-prev btn">Amazon.com<br>Delivered: Your Amazon.com order #111-1111111 <br> Your package had been delivered!</button>
-                <button type="button" class="email-prev btn">John Smith via LinkedIn <br> John just messaged you<br> 1 message awaits your response.</button>
-                <button type="button" class="email-prev btn">incmedia.org <br> IT'S HERE <br> Hi, friend! Are you ready to start school? Let’s make sure you (or the students in your family)</button>
-                <button type="button" class="email-prev btn">Spotify <br> New music from NewJeans!<br> The NewJeans EP has arrived. Listen now.</button>
-                <button type="button" class="email-prev btn">Amazon.com <br>Your Amazon.com order #111-1111111<br>Thank you for shopping with us.</button>
-                <button type="button" class="email-prev btn">LinkedIn<br>Top companies are hiring <br> Check out the full list of the LinkedIn Top Companiesto see who's hiring.</button>
-                <button type="button" class="email-prev btn">incmedia.org <br> IT'S HERE <br> Hi, friend! Are you ready to start school? Let’s make sure you(or the students in your family)</button>
+                <button type="button" class="email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">Figma <br> Sign up for Figma Education <br> Hi there,We wanted to let you know that you may...<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">Amazon.com<br>Delivered: Your Amazon.com order #111-1111111 <br> Your package had been delivered!<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">John Smith via LinkedIn <br> John just messaged you<br> 1 message awaits your response.<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">incmedia.org <br> IT'S HERE <br> Hi, friend! Are you ready to start school? Let’s make sure you (or the students in your family)<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">Spotify <br> New music from NewJeans!<br> The NewJeans EP has arrived. Listen now.<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">Amazon.com <br>Your Amazon.com order #111-1111111<br>Thank you for shopping with us.<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">LinkedIn<br>Top companies are hiring <br> Check out the full list of the LinkedIn Top Companiesto see who's hiring.<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
+                <button type="button" class="email-prev btn">incmedia.org <br> IT'S HERE <br> Hi, friend! Are you ready to start school? Let’s make sure you(or the students in your family)<br>
+                    <a class="btn btn-primary" href="#" role="button">Reply</a>
+                    <a class="btn btn-primary" href="#" role="button">Forward</a>
+                </button>
             </div>
         </div>
 
