Change class name to match class in style.css so selected email highlights blue

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <!-- in order to get one email preview per line-->
             <div class="email-previews d-flex flex-column">
                 <!-- email previews that will be responsive to all screens-->
-                <button type="button" class="email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.<br>
+                <button type="button" class="email-highlight email-prev btn">UNIQLO USA <br>Fleece to meet you<br>Take on cool weather in style with our Fleece Collection.<br>
                     <a class="btn btn-primary" href="#" role="button">Reply</a>
                     <a class="btn btn-primary" href="#" role="button">Forward</a>
                 </button>
