Add google font link for subject field

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Bootstrap Email Page</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/9764ad7248.js" crossorigin="anonymous"></script>
+    <!-- google fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -99,7 +102,7 @@
         <div class="col-md-4 d-none d-md-block d-lg-none">
             <div class="card" style="width: auto">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><button type="button" class="btn btn-light">Inbox</button></li>
+                    <li class="list-group-item"><button type="button" class="btn-highlight btn btn-light">Inbox</button></li>
                     <li class="list-group-item"><button type="button" class="btn btn-light">Sent</button></li>
                     <li class="list-group-item"><button type="button" class="btn btn-light">Junk</button></li>
                     <li class="list-group-item"><button type="button" class="btn btn-light">Deleted</button></li>
