Removed ms-auto (redundancy) and hide acct icon for tablet view

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <!-- compose, acct, search elements -->
-                <div class="d-flex align-items-center gap-3 ms-auto">
+                <div class="d-flex align-items-center gap-3">
                     <div class="compose">
                         <i class="fa-regular fa-envelope ms-auto d-lg-none d-xl-none" style="color: #ecf1f8;"
                             data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" href="#offcanvas" role="button"
@@ -85,7 +85,7 @@
                     </div>
 
                     <!-- account icon -->
-                    <a class="account navbar-brand ms-auto " href="#">
+                    <a class="account navbar-brand d-md-none .d-lg-block" href="#">
                         <i class="fa-solid fa-user"></i>
                     </a>
                     <!-- search bar -->
