Add items to list items and buttons, made acct icon show on desktop again

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                             <button type="button" class="btn btn-dark">Junk</button>
                             <button type="button" class="btn btn-dark">Deleted</button>
                             <button type="button" class="btn btn-dark">Archive</button>
+                            <button type="button" class="btn btn-dark">Settings</button>
+                            <button type="button" class="btn btn-dark">Sign-out</button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +87,7 @@
                     </div>
 
                     <!-- account icon -->
-                    <a class="account navbar-brand d-md-none .d-lg-block" href="#">
+                    <a class="account navbar-brand" style="color:#ecf1f8" href="#">
                         <i class="fa-solid fa-user"></i>
                     </a>
                     <!-- search bar -->
@@ -107,6 +109,8 @@
                     <li class="list-group-item"><button type="button" class="btn btn-light">Junk</button></li>
                     <li class="list-group-item"><button type="button" class="btn btn-light">Deleted</button></li>
                     <li class="list-group-item"><button type="button" class="btn btn-light">Archive</button></li>
+                    <li class="list-group-item"><button type="button" class="btn btn-light">Settings</button></li>
+                    <li class="list-group-item"><button type="button" class="btn btn-light">Sign-out</button></li>
                 </ul>
             </div>
         </div>
